<?xml version="1.0"?>
<package format="3">
  <name>mosas_bringup</name>
  <version>0.0.0</version>
  <description>Top-level launch files for MOSAS simulation and localization.</description>
  <maintainer email="todo@example.com">todo</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>fast_lio</exec_depend>
  <exec_depend>pb_rm_simulation</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>scan_to_map_relocalization</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
