<?xml version="1.0"?>
<package format="3">
  <name>scan_to_map_relocalization</name>
  <version>0.0.0</version>
  <description>Scan-to-map relocalization correction node for LiDAR odometry.</description>
  <maintainer email="todo@example.com">todo</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
